# flink-connector-jdbc-source

./: .gitignore  LICENSE  README.md
.github/workflows/: main  main.yml  publish.yml
flink-java/: README.md  pom.xml
flink-java/src/main/java/bi/deep/flink/: JdbcSource.java  JdbcSourceFunction.java
flink-java/src/main/java/bi/deep/flink/connector/source/: JdbcSource.java  JdbcSourceConfig.java  (+2 more)
flink-java/src/main/java/bi/deep/flink/source/: JdbcCheckpoint.java  JdbcCheckpointSerializer.java  JdbcReader.java  JdbcReaderTask.java  JdbcSourceConfig.java  JdbcSplit.java  JdbcSplitEnumerator.java  JdbcSplitSerializer.java  ParallelismExceededException.java  SimpleSerializer.java
flink-java/src/main/java/bi/deep/jdbc/: RowSchema.java
flink-java/src/main/java/bi/deep/jdbc/parsers/: Parser.java  Parsers.java  Result.java  SerializableFunction.java  ThrowableFunction.java  ThrowableSupplier.java  VisitorBasedParser.java
flink-java/src/main/java/bi/deep/jdbc/visitors/: ColumnVisitor.java  JsonStringVisitor.java
flink-java/src/test/java/bi/deep/flink/: JdbcSourceFunctionTest.java  JdbcSourceTest.java
flink-java/src/test/java/bi/deep/jdbc/parsers/: H2ArrayParserTest.java  H2ParsersTest.java  ParsersTest.java  PostgresArrayParserTest.java  PostgresParserTest.java
flink-java/src/test/resources/: init_array_postgresql.sql  init_postgresql.sql  init_postgresql_quotes.sql
flink-python/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
flink-python/pyflink_deepbi/: jdbc.py  util.py
flink-python/tests/pyflink_deepbi/: test_jdbc.py
(+33 files in other folders)
