[metadata]
name = pyflink_deepbi
version = 0.0.1
author = "Bartosz Mikulski"
author_email = "bartosz.mikulski@deep.bi, bartosz.mikulski.praca@gmail.com"
description = "Deep.BI utilities libraries for PyFlink"

[options]
include_package_data = True
install_requires =
    apache_flink >=1.15

python_requires = >=3.7
packages = find:
