[metadata]
name = pyflink_deepbi
version = 0.1.1
author = "Bartosz Mikulski"
author_email = bartosz.mikulski@deep.bi, bartosz.mikulski.praca@gmail.com
description = "Deep.BI utilities libraries for PyFlink"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
include_package_data = True
install_requires =
    apache_flink >=1.15

python_requires = >=3.7
packages = find:
